[package]
name = "___std-backtrace-anyhow"
version = "0.0.1" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Fork of anyhow that uses backtrace from std"
documentation = "https://docs.rs/anyhow"
edition = "2018"
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xxxxtest/anyhow-std-backtrace/tree/use-stable-backtrace"
rust-version = "1.39"

[features]
default = ["std"]
std = []

[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0.6"
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
